--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,3 +1,20 @@
 .field-text {
     margin-left: 100px;
 }
+
+.btn {
+    margin-left: 280px;
+    font-family: 'Dancing Script', cursive;
+    background-color: #5cd686;
+    color: #ffff;
+    font-weight: 600;
+    transition: 1s;
+
+}
+
+.btn:hover {
+   color: #ffff;
+   background-color: #18e05d;
+   cursor: pointer;
+   transform: perspective(30em) rotateY(50deg)
+}
